bare html/css layout

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -19,14 +19,17 @@
 
 <body>
 
-    <nav>
-
+    <!-- Todo -->
+    <nav class="container-fluid bg-dark text-light" style="min-height: 6vh;">
+            <h4>Network Mapper</h4>
     </nav>
 
     <section>
-        <div class="container-fluid">
+        <div class="container-fluid d-100">
             <div class="container">
-                <h1>Team 43s<br/>Network Mapper</h1>
+                <div class="d-flex">
+                    <h1>Team 43s<br/>Network Mapper</h1>
+                </div>
             </div>
         </div>
     </section>
