home page styling

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <section>
-        <div class="container-fluid d-100">
+        <div class="container-fluid d-100 hero-img">
             <div class="container">
                 <div class="d-flex">
                     <h1>Team 43s<br/>Network Mapper</h1>
