hero text styling

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -20,15 +20,15 @@
 <body>
 
     <!-- Todo -->
-    <nav class="container-fluid bg-dark text-light" style="min-height: 6vh;">
+    <nav class="container-fluid bg-dark text-primary-c" style="min-height: 6vh;">
             <h4>Network Mapper</h4>
     </nav>
 
     <section>
-        <div class="container-fluid d-100 hero-img">
+        <div class="container-fluid d-100 hero-img text-primary-c">
             <div class="container">
-                <div class="d-flex">
-                    <h1>Team 43s<br/>Network Mapper</h1>
+                <div class="d-flex justify-content-center align-items-center text-center" style="height: 40vh;">
+                    <h1 class="display-1">Team 43s<br/>Network Mapper</h1>
                 </div>
             </div>
         </div>
