--- a/src/client/index.html
+++ b/src/client/index.html
@@ -19,7 +19,6 @@
 
 <body>
 
-    <!-- Todo -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow" aria-label="Navbar">
         <div class="container-fluid px-5">
             <a href="./index.html" class="navbar-brand">
@@ -59,8 +58,14 @@
         </div>
     </section>
 
-    <footer>
-        
+    <footer class="border-top">
+        <div class="container-fluid bg-dark py-3" style="min-height: 10vh;">
+            <div class="container">
+                <div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 10vh;">
+                    <p class="text-light">&copy; Cam, Harry, Kane, Adam, Callum, Maaz</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
