--- a/src/client/index.html
+++ b/src/client/index.html
@@ -63,6 +63,7 @@
             <div class="container">
                 <div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 10vh;">
                     <p class="text-light">&copy; Cam, Harry, Kane, Adam, Callum, Maaz</p>
+                    <p class="text-muted">Team 43 - Network Mapper - CITS3200 - University of Western Australia</p>
                 </div>
             </div>
         </div>
