graph styling changes

--- a/src/client/tool.html
+++ b/src/client/tool.html
@@ -60,7 +60,7 @@
             </div>
 
             <!-- GRAPH -->
-            <div class="row">
+            <div class="row pt-5">
                 <svg id="svgID" width="640" height="480"></svg>
             </div>
         </div>
