--- a/src/client/tool.html
+++ b/src/client/tool.html
@@ -58,9 +58,13 @@
                     <button type="submit" class="btn btn-primary-c">Submit</button>
                 </form>
             </div>
+
+            <!-- Graph Display -->
             <section>
                 <div id="viz"></div>
             </section>
+
+            <!-- Table Display -->
             <div>
                 <table id="researcher" class="table table-light">
                     <tr>
