fix homepage button

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -52,7 +52,7 @@
                     <h1 class="display-1">Team 43s<br/>Network Mapper</h1>
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-primary-c">Networking Tool</button>
+                    <button class="btn btn-primary-c"><a style="text-decoration: none; color: white" href="./tool.html">Networking Tool</a></button>
                 </div>
             </div>
         </div>
