--- a/src/client/tool.html
+++ b/src/client/tool.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav ms-auto">
                     <li class="nav-item pe-md-3">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item pe-md-3">
                         <a class="nav-link" href="./researchers.html">Researchers</a>
@@ -74,7 +74,7 @@
                     <tr>
                         <td>Scopus ID</td>
                         <td id="scopusID"></td>
-                    </tr>
+                    </tr>   
                     <tr>
                         <td>Layer Of Known</td>
                         <td id="layerOfKnown"></td>
