formatting changes added researcher page functionality

--- a/src/client/researchers.html
+++ b/src/client/researchers.html
@@ -1,12 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Network Mapper | Researchers</title>
+
+    <link rel="stylesheet" href="./css/main.css">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
+        defer></script>
 </head>
+
 <body>
-    
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow" aria-label="Navbar">
+        <div class="container-fluid px-5">
+            <img src="./img/blackbglogosmall.png" alt="logo" width="50" height="50">
+            <a href="./index.html" class="navbar-brand ps-md-3">Network Mapper</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="nav navbar-nav ms-auto">
+                    <li class="nav-item px-md-3">
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item px-md-3">
+                        <a class="nav-link active" href="./researchers.html">Researchers</a>
+                    </li>
+                    <li class="nav-item px-md-3">
+                        <a class="nav-link" href="./tool.html">Tool</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section>
+        <div class="container-fluid d-100 hero-img text-primary-c">
+            <div class="d-flex justify-content-center align-items-center text-center" style="height: 20vh;">
+                <h1 class="display-1">Researcher Details</h1>
+            </div>
+           <!--Table Display -->
+           <div>
+            <table id="researcher" class="table table-light">
+                <tr>
+                    <td>Name</td>
+                    <td id="researcherName"></td>
+                </tr>
+                <tr>
+                    <td>Scopus ID</td>
+                    <td id="scopusID"></td>
+                </tr>   
+                <tr>
+                    <td>Layer Of Known</td>
+                    <td id="layerOfKnown"></td>
+                </tr>
+            </table>
+            <table id="project" class="table table-light">
+                <tr>
+                    <td>Category</td>
+                    <td id="projectCategory"></td>
+                </tr>
+                <tr>
+                    <td>Year of Publication</td>
+                    <td id="publicationYear"></td>
+                </tr>
+            </table>
+            <table id="relationShip_WORKED_WITH" class="table table-light">
+                <tr>
+                    <td>Relationship</td>
+                    <td>Worked With</td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td id="r1"></td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td id="r2"></td>
+                </tr>
+                <tr>
+                    <td>Times worked together</td>
+                    <td id="workedWith"></td>
+                </tr>
+            </table>
+            <table id="relationShip_WORKED_ON" class="table table-light">
+                <tr>
+                    <td>Relationship</td>
+                    <td>Worked On</td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td id="r"></td>
+                </tr>
+                <tr>
+                    <td>Name of Project</td>
+                    <td id="projectName"></td>
+                </tr>
+            </table>
+        </div>
+        </div>
+    </section>
+
+    <footer class="border-top">
+        <div class="container-fluid bg-dark py-3" style="min-height: 10vh;">
+            <div class="container">
+                <div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 10vh;">
+                    <p class="text-light">&copy; Cam, Harry, Kane, Adam, Callum, Maaz</p>
+                    <p class="text-muted">Team 43 - Network Mapper - CITS3200 - University of Western Australia</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
