--- a/src/client/index.html
+++ b/src/client/index.html
@@ -21,9 +21,8 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow" aria-label="Navbar">
         <div class="container-fluid px-5">
-            <a href="./index.html" class="navbar-brand">
-                <p>Network Mapper</p>
-            </a>
+            <img src="./img/blackbglogosmall.png" alt="logo" width="50" height="50">
+            <a href="./index.html" class="navbar-brand ps-md-3">Network Mapper</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,13 +30,13 @@
 
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav ms-auto">
-                    <li class="nav-item pe-md-3">
+                    <li class="nav-item px-md-3">
                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
-                    <li class="nav-item pe-md-3">
+                    <li class="nav-item px-md-3">
                         <a class="nav-link" href="./researchers.html">Researchers</a>
                     </li>
-                    <li class="nav-item px-md-3 highlight-nav">
+                    <li class="nav-item px-md-3">
                         <a class="nav-link" href="./tool.html">Tool</a>
                     </li>
                 </ul>
