table on tool page back

--- a/src/client/tool.html
+++ b/src/client/tool.html
@@ -62,6 +62,65 @@
             <section>
                 <div id="viz"></div>
             </section>
+            <!--Table Display -->
+            <div>
+                <table id="researcher" class="table table-light">
+                    <tr>
+                        <td>Name</td>
+                        <td id="researcherName"></td>
+                    </tr>
+                    <tr>
+                        <td>Scopus ID</td>
+                        <td id="scopusID"></td>
+                    </tr>
+                    <tr>
+                        <td>Layer Of Known</td>
+                        <td id="layerOfKnown"></td>
+                    </tr>
+                </table>
+                <table id="project" class="table table-light">
+                    <tr>
+                        <td>Category</td>
+                        <td id="projectCategory"></td>
+                    </tr>
+                    <tr>
+                        <td>Year of Publication</td>
+                        <td id="publicationYear"></td>
+                    </tr>
+                </table>
+                <table id="relationShip_WORKED_WITH" class="table table-light">
+                    <tr>
+                        <td>Relationship</td>
+                        <td>Worked With</td>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td id="r1"></td>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td id="r2"></td>
+                    </tr>
+                    <tr>
+                        <td>Times worked together</td>
+                        <td id="workedWith"></td>
+                    </tr>
+                </table>
+                <table id="relationShip_WORKED_ON" class="table table-light">
+                    <tr>
+                        <td>Relationship</td>
+                        <td>Worked On</td>
+                    </tr>
+                    <tr>
+                        <td>Name</td>
+                        <td id="r"></td>
+                    </tr>
+                    <tr>
+                        <td>Name of Project</td>
+                        <td id="projectName"></td>
+                    </tr>
+                </table>
+            </div>
 
         </div>
     </section>
