more formatting changes

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -48,10 +48,16 @@
         <div class="container-fluid d-100 hero-img text-primary-c">
             <div class="container">
                 <div class="d-flex justify-content-center align-items-center text-center" style="height: 40vh;">
-                    <h1 class="display-1">Team 43s<br/>Network Mapper</h1>
+                    <img src="./img/logolarge.png">
+                </div>
+                <div class="d-flex justify-content-center align-items-center text-center" style="height: 10vh;">
+                    <img src="./img/NetworkingTool.png">
+                </div>
+                <div>
+                    <p class="text-dark text-center">A network graph solution designed for medical researchers to connect with like minds.</p>
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-primary-c"><a style="text-decoration: none; color: white" href="./tool.html">Networking Tool</a></button>
+                    <p class="text-dark">Click on the 'Tool' tab in the top right to begin.</p>
                 </div>
             </div>
         </div>
