--- a/src/client/researchers.html
+++ b/src/client/researchers.html
@@ -46,8 +46,8 @@
 
     <section>
         <div class="container-fluid d-100 hero-img text-primary-c">
-            <div class="d-flex justify-content-center align-items-center text-center" style="height: 20vh;">
-                <h1 class="display-1">Researcher Details</h1>
+            <div class="d-flex justify-content-center align-items-center text-center">
+                <img src="./img/ResearcherDetails.png">
             </div>
            <!--Table Display -->
            <div>
