--- a/src/client/tool.html
+++ b/src/client/tool.html
@@ -44,19 +44,21 @@
         </div>
     </nav>
 
-    <section class="bg-dark container-fluid">
+    <section>
         <div class="container">
-            <h1 class="text-light text-center pt-4">Researcher Mapping Graph</h1>
-            <div class="row">
+            <div class="d-flex justify-content-center align-items-center text-center" style="margin-top: 10px; margin-bottom: 5px;">
+                <img src="./img/NetworkingTool.png">
+            </div>
+            <!-- <div class="row"> -->
                 <!-- FORM -->
-                <form method="GET" action="/" name="getResearcher">
+                <!-- <form method="GET" action="/" name="getResearcher">
                     <div class="mb-3">
                         <label for="InputName" class="form-label text-light">Researcher Name</label>
                         <input type="text" class="form-control" id="InputName" required>
                     </div>
                     <button type="submit" class="btn btn-primary-c">Submit</button>
                 </form>
-            </div>
+            </div> -->
 
             <!-- Graph Display -->
             <section>
