Fixed up add researcher page

--- a/src/client/researchers.html
+++ b/src/client/researchers.html
@@ -45,27 +45,32 @@
     </nav>
 
     <section>
-        <div class="container-fluid d-100 hero-img text-primary-c">
+        <div class="container-fluid hero-img text-primary-c">
             <div class="d-flex justify-content-center align-items-center text-center">
                 <img src="./img/ResearcherDetails.png">
             </div>
            <!--Table Display -->
            <div>
+            <h4 class="text-dark">Add Researcher</h4>
             <table id="researcher" class="table table-light">
                 <tr>
-                    <td>Name</td>
+                    <td>First Name</td>
                     <td id="researcherName"></td>
+                </tr>
+                <tr>
+                    <td>Last Name</td>
                 </tr>
                 <tr>
                     <td>Scopus ID</td>
                     <td id="scopusID"></td>
                 </tr>   
                 <tr>
-                    <td>Layer Of Known</td>
+                    <td>Degree of Connection</td>
                     <td id="layerOfKnown"></td>
                 </tr>
             </table>
             <table id="project" class="table table-light">
+            <h4 class="text-dark">Add Publication</h4>
                 <tr>
                     <td>Category</td>
                     <td id="projectCategory"></td>
@@ -75,21 +80,21 @@
                     <td id="publicationYear"></td>
                 </tr>
             </table>
-            <table id="relationShip_WORKED_WITH" class="table table-light">
+            <!-- <table id="relationShip_WORKED_WITH" class="table table-light">
                 <tr>
                     <td>Relationship</td>
                     <td>Worked With</td>
                 </tr>
                 <tr>
-                    <td>Name</td>
+                    <td>First Name</td>
                     <td id="r1"></td>
                 </tr>
                 <tr>
-                    <td>Name</td>
+                    <td>Last Name</td>
                     <td id="r2"></td>
                 </tr>
                 <tr>
-                    <td>Times worked together</td>
+                    <td>Times Worked Together</td>
                     <td id="workedWith"></td>
                 </tr>
             </table>
@@ -106,8 +111,8 @@
                     <td>Name of Project</td>
                     <td id="projectName"></td>
                 </tr>
-            </table>
-        </div>
+            </table> -->
+        <!-- </div> -->
         </div>
     </section>
 
