--- a/src/client/researchers.html
+++ b/src/client/researchers.html
@@ -54,11 +54,8 @@
             <h4 class="text-dark">Add Researcher</h4>
             <table id="researcher" class="table table-light">
                 <tr>
-                    <td>First Name</td>
+                    <td>Full Name</td>
                     <td id="researcherName"></td>
-                </tr>
-                <tr>
-                    <td>Last Name</td>
                 </tr>
                 <tr>
                     <td>Scopus ID</td>
