make section 100vh

--- a/src/client/researchers.html
+++ b/src/client/researchers.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <section>
+    <section  style="min-height: 100vh;">
         <div class="container-fluid hero-img text-primary-c">
             <div class="d-flex justify-content-center align-items-center text-center">
                 <img src="./img/ResearcherDetails.png">
